--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,35 @@ html {
   --imp-text-color: #6adf7a;
 }
 
+.landingimg {
+    background-image: url('./living.jpg');
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    /* z-index: 99999; */
+    top: 0;
+    width: 100%;
+    height: 100vh;
+}
+
+.landing-container {
+  max-width: 1024px;
+  margin: 0 auto;
+  padding: 200px 0px;
+  position: relative;
+  z-index: 1; /* Ensure text is above the overlay */
+  color: white;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Adjust the alpha value for desired opacity */
+}
+
 .green {
   color: var(--imp-text-color) !important;
 }
@@ -58,18 +87,18 @@ button:focus {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #2d1950;
+  background: #a0943a;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgba(178, 121, 216, 0.959);
+  background: rgba(214, 216, 121, 0.959);
   border-radius: 12px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: rgba(222, 130, 235, 0.911);
+  background: rgba(155, 156, 80, 0.959);
   border-radius: 12px;
 }
 
@@ -77,10 +106,15 @@ button:focus {
 /* Navbar Section  */
 /* --------- */
 .sticky {
-  background-color: #1b1a2ea9 !important;
+  /* background-color: #1b1a2ea9 !important; */
+  background-color:#ffffffd6 !important;
   transition: all 0.3s ease-out 0s !important;
   box-shadow: 0px 10px 10px 0px rgba(9, 5, 29, 0.171) !important;
   backdrop-filter: blur(15px) !important;
+}
+
+.navbar-nav .nav-item .nav-link-sticky {
+  color: #000000 !important;
 }
 
 .navbar {
@@ -152,7 +186,8 @@ button:focus {
   }
 }
 .navbar-brand {
-  color: rgb(250, 250, 250) !important;
+  /* color: rgb(250, 250, 250) !important; */
+  color: rgb(0 0 0);
 }
 
 .logo {
@@ -161,7 +196,7 @@ button:focus {
 }
 
 .navbar-nav .nav-link {
-  color: white !important;
+  color: #ffffff !important;
   padding-right: 1rem !important;
   padding-left: 1rem !important;
 }
@@ -252,7 +287,8 @@ button:focus {
 }
 
 .home-header {
-  padding-top: 80px !important;
+  /* padding-top: 80px !important; */
+  text-align: center;
 }
 
 .home-section {
@@ -266,8 +302,8 @@ button:focus {
 }
 
 .home-content {
-  padding: 9rem 0 2rem !important;
-  color: whitesmoke;
+  padding: 5rem 0 5rem !important;
+  color: #000000;
   text-align: left;
 }
 
@@ -277,7 +313,7 @@ button:focus {
 }
 
 .heading-name {
-  font-size: 2.5em !important;
+  font-size: 2.2em !important;
   padding-left: 45px !important;
 }
 
@@ -516,7 +552,7 @@ button:focus {
 .about-section {
   position: relative !important;
   padding-top: 150px !important;
-  padding-bottom: 30px !important;
+  padding-bottom: 6.6rem !important;
   background-image: var(--section-background-color) !important;
   color: white !important;
 }
@@ -625,4 +661,39 @@ button:focus {
 }
 .fork-btn-inner::after {
   display: none !important;
+}
+
+.testimonials-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.testimonial {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 20px;
+  text-align: center;
+  flex: 1;
+  margin: 10px;
+}
+
+.testimonial-image {
+  width: 100px;
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+
+.testimonial-quote {
+  font-style: italic;
+  margin-bottom: 10px;
+}
+
+.testimonial-name {
+  font-weight: bold;
+}
+
+.testimonial-role {
+  color: #888;
+  font-size: 0.8em;
 }
